--- a/Meetum/Meetum.iOS/Meetum.iOS.csproj
+++ b/Meetum/Meetum.iOS/Meetum.iOS.csproj
@@ -3,8 +3,6 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">iPhoneSimulator</Platform>
-    <ProductVersion>12.0.0</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{6A02ABA0-EE87-4C04-A065-BEF98D7F4E53}</ProjectGuid>
     <ProjectTypeGuids>{6BC8ED88-2882-458C-8E55-DFD12B67127B};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <OutputType>Exe</OutputType>
@@ -27,6 +25,7 @@
     <MtouchI18n>
     </MtouchI18n>
     <MtouchArch>ARMv7</MtouchArch>
+    <MtouchExtraArgs>--registrar:static</MtouchExtraArgs>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|iPhoneSimulator' ">
     <DebugType>full</DebugType>
@@ -95,25 +94,20 @@
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
     <Reference Include="monotouch" />
-    <Reference Include="Xamarin.QuickUI.Core, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Xamarin.QuickUI.1.0.6175\lib\MonoTouch10\Xamarin.QuickUI.Core.dll</HintPath>
+    <Reference Include="Xamarin.QuickUI.Core">
+      <HintPath>..\packages\Xamarin.QuickUI.Master.1.0.6431\lib\MonoTouch10\Xamarin.QuickUI.Core.dll</HintPath>
     </Reference>
-    <Reference Include="Xamarin.QuickUI.Maps, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Xamarin.QuickUI.Maps.1.0.6175\lib\MonoTouch10\Xamarin.QuickUI.Maps.dll</HintPath>
+    <Reference Include="Xamarin.QuickUI.Maps">
+      <HintPath>..\packages\Xamarin.QuickUI.Maps.Master.1.0.6431\lib\MonoTouch10\Xamarin.QuickUI.Maps.dll</HintPath>
     </Reference>
-    <Reference Include="Xamarin.QuickUI.Maps.iOS, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Xamarin.QuickUI.Maps.1.0.6175\lib\MonoTouch10\Xamarin.QuickUI.Maps.iOS.dll</HintPath>
+    <Reference Include="Xamarin.QuickUI.Maps.iOS">
+      <HintPath>..\packages\Xamarin.QuickUI.Maps.Master.1.0.6431\lib\MonoTouch10\Xamarin.QuickUI.Maps.iOS.dll</HintPath>
     </Reference>
-    <Reference Include="Xamarin.QuickUI.Platform.iOS, Version=1.0.5190.31761, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Xamarin.QuickUI.1.0.6175\lib\MonoTouch10\Xamarin.QuickUI.Platform.iOS.dll</HintPath>
+    <Reference Include="Xamarin.QuickUI.Platform.iOS">
+      <HintPath>..\packages\Xamarin.QuickUI.Master.1.0.6431\lib\MonoTouch10\Xamarin.QuickUI.Platform.iOS.dll</HintPath>
     </Reference>
-    <Reference Include="Xamarin.QuickUI.Xaml, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Xamarin.QuickUI.1.0.6175\lib\MonoTouch10\Xamarin.QuickUI.Xaml.dll</HintPath>
+    <Reference Include="Xamarin.QuickUI.Xaml">
+      <HintPath>..\packages\Xamarin.QuickUI.Master.1.0.6431\lib\MonoTouch10\Xamarin.QuickUI.Xaml.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -126,6 +120,7 @@
     <BundleResource Include="Resources\settings%402x.png" />
     <BundleResource Include="Resources\zoom_in.png" />
     <BundleResource Include="Resources\zoom_out.png" />
+    <BundleResource Include="Resources\filter.png" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Info.plist" />
@@ -148,11 +143,11 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup />
-  <Import Project="..\packages\Xamarin.QuickUI.1.0.6175\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10\Xamarin.QuickUI.targets" Condition="Exists('..\packages\Xamarin.QuickUI.1.0.6175\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10\Xamarin.QuickUI.targets')" />
+  <Import Project="..\packages\Xamarin.QuickUI.Master.1.0.6431\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10\Xamarin.QuickUI.Master.targets" Condition="Exists('..\packages\Xamarin.QuickUI.Master.1.0.6431\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10\Xamarin.QuickUI.Master.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('..\packages\Xamarin.QuickUI.1.0.6175\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10\Xamarin.QuickUI.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Xamarin.QuickUI.1.0.6175\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10\Xamarin.QuickUI.targets'))" />
+    <Error Condition="!Exists('..\packages\Xamarin.QuickUI.Master.1.0.6431\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10\Xamarin.QuickUI.Master.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Xamarin.QuickUI.Master.1.0.6431\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10\Xamarin.QuickUI.Master.targets'))" />
   </Target>
 </Project>
