--- a/Meetum/Meetum.iOS/packages.config
+++ b/Meetum/Meetum.iOS/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Xamarin.QuickUI" version="1.0.6175" targetFramework="MonoTouch10" />
-  <package id="Xamarin.QuickUI.Maps" version="1.0.6175" targetFramework="MonoTouch10" />
+  <package id="Xamarin.QuickUI.Maps.Master" version="1.0.6431" targetFramework="MonoTouch10" />
+  <package id="Xamarin.QuickUI.Master" version="1.0.6431" targetFramework="MonoTouch10" />
 </packages>
