--- a/Meetum/Meetum/packages.config
+++ b/Meetum/Meetum/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Xamarin.QuickUI" version="1.0.6175" targetFramework="portable-net45+wp80+win+MonoAndroid10+MonoTouch10" />
-  <package id="Xamarin.QuickUI.Maps" version="1.0.6175" targetFramework="portable-net45+wp80+win+MonoAndroid10+MonoTouch10" />
+  <package id="Newtonsoft.Json" version="6.0.2" targetFramework="portable-net45+wp80+win+MonoAndroid10+MonoTouch10" />
+  <package id="Xamarin.QuickUI.Maps.Master" version="1.0.6431" targetFramework="portable-net45+wp80+win+MonoAndroid10+MonoTouch10" />
+  <package id="Xamarin.QuickUI.Master" version="1.0.6431" targetFramework="portable-net45+wp80+win+MonoAndroid10+MonoTouch10" />
 </packages>
