--- a/Meetum/Meetum.Android/packages.config
+++ b/Meetum/Meetum.Android/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Xamarin.QuickUI.Maps.Master" version="1.0.6431" targetFramework="MonoAndroid40" />
-  <package id="Xamarin.QuickUI.Master" version="1.0.6431" targetFramework="MonoAndroid40" />
+  <package id="Xamarin.Forms.Maps.Master" version="1.0.6469" targetFramework="MonoAndroid403" />
+  <package id="Xamarin.Forms.Master" version="1.0.6469" targetFramework="MonoAndroid403" />
 </packages>
