--- a/Meetum/Meetum/Meetum.csproj
+++ b/Meetum/Meetum/Meetum.csproj
@@ -37,7 +37,6 @@
     <Compile Include="Models\OptionItem.cs" />
     <Compile Include="Views\DarkTextCell.cs" />
     <Compile Include="Models\TabItem.cs" />
-    <Compile Include="Views\CustomerMapFactory.cs" />
     <Compile Include="Views\ScrollableStackLayout.cs" />
     <Compile Include="Meetum.cs" />
     <Compile Include="Models\Author.cs" />
@@ -53,6 +52,7 @@
     <Compile Include="Pages\RootPage.cs" />
     <Compile Include="Pages\MenuPage.cs" />
     <Compile Include="Pages\MainPage.cs" />
+    <Compile Include="Views\MapFactory.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json">
