--- a/Meetum/Meetum.WindowsPhone/Meetum.WindowsPhone.csproj
+++ b/Meetum/Meetum.WindowsPhone/Meetum.WindowsPhone.csproj
@@ -25,7 +25,9 @@
     <ValidateXaml>true</ValidateXaml>
     <MinimumVisualStudioVersion>11.0</MinimumVisualStudioVersion>
     <ThrowErrorsInValidation>true</ThrowErrorsInValidation>
-    <NuGetPackageImportStamp>1270db92</NuGetPackageImportStamp>
+    <NuGetPackageImportStamp>7afc5f07</NuGetPackageImportStamp>
+    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
+    <RestorePackages>true</RestorePackages>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -126,6 +128,7 @@
   <ItemGroup>
     <Content Include="Assets\AlignmentGrid.png" />
     <Content Include="filter.png" />
+    <Content Include="README_FIRST.txt" />
     <Content Include="settings.png" />
     <Content Include="Assets\ApplicationIcon.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -150,7 +153,6 @@
     <BundleResource Include="Toolkit.Content\ApplicationBar.Check.png" />
     <BundleResource Include="Toolkit.Content\ApplicationBar.Cancel.png" />
     <BundleResource Include="Toolkit.Content\ApplicationBar.Add.png" />
-    <Content Include="README_FIRST.txt" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources\AppResources.resx">
@@ -169,23 +171,23 @@
     </Reference>
     <Reference Include="Xamarin.QuickUI.Core, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Xamarin.QuickUI.1.0.6175\lib\WP80\Xamarin.QuickUI.Core.dll</HintPath>
+      <HintPath>..\packages\Xamarin.QuickUI.Master.1.0.6458\lib\WP80\Xamarin.QuickUI.Core.dll</HintPath>
     </Reference>
     <Reference Include="Xamarin.QuickUI.Maps, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Xamarin.QuickUI.Maps.1.0.6175\lib\WP80\Xamarin.QuickUI.Maps.dll</HintPath>
+      <HintPath>..\packages\Xamarin.QuickUI.Maps.Master.1.0.6458\lib\WP80\Xamarin.QuickUI.Maps.dll</HintPath>
     </Reference>
     <Reference Include="Xamarin.QuickUI.Maps.WP8, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Xamarin.QuickUI.Maps.1.0.6175\lib\WP80\Xamarin.QuickUI.Maps.WP8.dll</HintPath>
+      <HintPath>..\packages\Xamarin.QuickUI.Maps.Master.1.0.6458\lib\WP80\Xamarin.QuickUI.Maps.WP8.dll</HintPath>
     </Reference>
     <Reference Include="Xamarin.QuickUI.Platform.WP8, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Xamarin.QuickUI.1.0.6175\lib\WP80\Xamarin.QuickUI.Platform.WP8.dll</HintPath>
+      <HintPath>..\packages\Xamarin.QuickUI.Master.1.0.6458\lib\WP80\Xamarin.QuickUI.Platform.WP8.dll</HintPath>
     </Reference>
     <Reference Include="Xamarin.QuickUI.Xaml, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Xamarin.QuickUI.1.0.6175\lib\WP80\Xamarin.QuickUI.Xaml.dll</HintPath>
+      <HintPath>..\packages\Xamarin.QuickUI.Master.1.0.6458\lib\WP80\Xamarin.QuickUI.Xaml.dll</HintPath>
     </Reference>
   </ItemGroup>
   <Import Project="..\Meetup.Shared\Meetup.Shared.projitems" Label="Shared" Condition="Exists('..\Meetup.Shared\Meetup.Shared.projitems')" />
@@ -199,11 +201,13 @@
   </Target>
   -->
   <ProjectExtensions />
-  <Import Project="..\packages\Xamarin.QuickUI.1.0.6175\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10\Xamarin.QuickUI.targets" Condition="Exists('..\packages\Xamarin.QuickUI.1.0.6175\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10\Xamarin.QuickUI.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('..\packages\Xamarin.QuickUI.1.0.6175\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10\Xamarin.QuickUI.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Xamarin.QuickUI.1.0.6175\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10\Xamarin.QuickUI.targets'))" />
+    <Error Condition="!Exists('$(SolutionDir)\.nuget\NuGet.targets')" Text="$([System.String]::Format('$(ErrorText)', '$(SolutionDir)\.nuget\NuGet.targets'))" />
+    <Error Condition="!Exists('..\packages\Xamarin.QuickUI.Master.1.0.6458\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10\Xamarin.QuickUI.Master.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Xamarin.QuickUI.Master.1.0.6458\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10\Xamarin.QuickUI.Master.targets'))" />
   </Target>
+  <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
+  <Import Project="..\packages\Xamarin.QuickUI.Master.1.0.6458\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10\Xamarin.QuickUI.Master.targets" Condition="Exists('..\packages\Xamarin.QuickUI.Master.1.0.6458\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10\Xamarin.QuickUI.Master.targets')" />
 </Project>
