--- a/Meetum/Meetum.WindowsPhone/packages.config
+++ b/Meetum/Meetum.WindowsPhone/packages.config
@@ -2,6 +2,6 @@
 <packages>
   <package id="Newtonsoft.Json" version="6.0.3" targetFramework="wp80" />
   <package id="WPtoolkit" version="4.2013.08.16" targetFramework="wp80" />
-  <package id="Xamarin.QuickUI" version="1.0.6175" targetFramework="wp80" />
-  <package id="Xamarin.QuickUI.Maps" version="1.0.6175" targetFramework="wp80" />
+  <package id="Xamarin.QuickUI.Maps.Master" version="1.0.6458" targetFramework="wp80" />
+  <package id="Xamarin.QuickUI.Master" version="1.0.6458" targetFramework="wp80" />
 </packages>
